--- a/mystyle.css
+++ b/mystyle.css
@@ -35,6 +35,7 @@ p{
     align-items: center;
     padding: 0 2rem;
     margin: auto; 
+    /* width: 100%; */
 }
 .nav-img-holder a img{
     width: 100px;
@@ -76,6 +77,7 @@ nav ul li a:hover{
     .nav-container{
         flex-direction: column;
         align-items: flex-start;
+        width: 100%;
     }
     nav{
         width: 100%;
