--- a/mystyle.css
+++ b/mystyle.css
@@ -15,6 +15,29 @@ h1 h2 h3{
 p{
     color: black;
 }
+.name-container{
+    width: 100%;
+    border-bottom: 1px solid;
+}
+progress{
+    width: 100%;
+}
+.progress h1{
+    font-size: 30px;
+    margin-left: 15px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: rgb(255, 102, 102);
+    border-style: solid;
+    border: black;
+    width: auto;
+}
+.progress img{
+    display: block;
+    margin-top: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 45%;
+}
 .nav-wrapper{
     width: 100%;
     border-width: 1px;
