--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -177,6 +177,16 @@ input, select, textarea {
 		font-size: 2em;
 		letter-spacing: -0.015em;
 	}
+		h2.students.left{
+			text-align:right;
+			padding-right: 10%;
+		}
+		
+
+		h2.students.right{
+			text-align:left;
+			padding-left: 10%;
+		}
 
 	h3 {
 		font-size: 1.5em;
@@ -1794,6 +1804,19 @@ input, select, textarea {
 		margin-bottom: 3ex;
 		padding-left: 3cm;
 	}
+
+	ul.students.left {
+		padding-left: 41%;
+	}
+
+	ul.students.right {
+		padding-left: 12%;
+	}
+
+		ul.students li a {
+			text-decoration: none;
+			color: inherit;
+		}
 
 /* Social */
 
